essedum-ui/shell/Orchestration/dev/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: super-app-ui
  namespace: common-app-superapp
  labels:
    app: super-app-ui
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: super-app-ui
  type: ClusterIP
